--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     restart: always
     environment:
       CAT_IMAGE_DIR: /var/morecats/images
-    volumns:
-      - ./images:/var/morecats/images
+    volumes:
+      - ./cat_images:/var/morecats/images
     ports:
       - 8080:8080
       
